--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@ http://ww12.hipstafood.com/-->
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Menú y Servicios</h2>
-                    <h3 class="section-subheading text-muted">Pasteleria + Imaginación + Confiteria</h3>
+                    <h3 class="section-subheading text-muted">Pasión + Imaginación</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-birthday-cake fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Pasteleria</h4>
                     <p class="text-muted">Pasteleria creativa sin olvidarnos del sabor.
@@ -115,7 +115,7 @@ http://ww12.hipstafood.com/-->
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-heart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Reposteria</h4>
                     <p class="text-muted">Tradicional, de Fusión, Experimental... echa un vistazo! .</p>
@@ -123,7 +123,7 @@ http://ww12.hipstafood.com/-->
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-child fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Confiteria</h4>
                     <p class="text-muted">Dulce en su máxima expresión!</p>
@@ -314,7 +314,7 @@ http://ww12.hipstafood.com/-->
     </section>
 -->
     <!-- Team Section -->
---
+
     <section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -341,15 +341,11 @@ http://ww12.hipstafood.com/-->
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" width="150px" class="img-responsive img-circle" alt="">
-                        <h4>Este lugar puede ser tuyo!</h4>
+
+                        <h4>¿Quieres formar parte del Team Vainilla?</h4>
                         <p class="text-muted">Envianos un correo a team@vainillaweb.mx</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="mailto:team@vainillaweb.mx?Subject=Quiero%20trabajar%20en%20Vainilla"><i class="fa fa-mail-forward"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -378,28 +374,23 @@ http://ww12.hipstafood.com/-->
         </div>
     </section>
 
-    <!-- Clients Aside -->
+    <!-- Supplier Section -->
     <aside class="clients">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-4 col-sm-4">
                     <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/sentido-organico.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-4 col-sm-4">
                     <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/casa-madero.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-4 col-sm-4">
                     <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/productos-locales.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
